# Hospital-Managment-System-1st-sem-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: changesdone.txt
src/components/dashboard/: dashboard.c
src/components/fmoperations/: addpatients.c  deletepatients.c  fmoperations.c  modifypatients.c  searchpatients.c
src/components/login/: loginUI.c  startUI.c
src/controller/: main.c  main.h
